--- a/src/css/style.css
+++ b/src/css/style.css
@@ -16,3 +16,10 @@ h1, h2 {
     width: 100%;
     height: 500px;
 }
+#demo_f2 {
+    width: 100%;
+    height: 600px;
+}
+#demo_g2 {
+    width: 100%;
+}
